--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <button>Press</button>
         </div> -->
 </body>
-<!-- <script src="js/datatype.js"></script> -->
+<script src="js/datatype.js"></script>
 <script src="js/string.js"></script>
+<script src="js/array.js"></script>
 
 </html>
