--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 <script src="js/datatype.js"></script>
 <script src="js/string.js"></script>
 <script src="js/array.js"></script>
+<script src="js/object.js"></script>
 
 </html>
