--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
 <script src="js/string.js"></script>
 <script src="js/array.js"></script>
 <script src="js/object.js"></script>
+<script src="js.control-flow.js"></script>
 
 </html>
