--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 <script src="js/array.js"></script>
 <script src="js/object.js"></script>
 <script src="js.control-flow.js"></script>
+<script src="js/loop.js"></script>
 
 </html>
