--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             animi omnis, atque eius culpa.</p>
             <button>Press</button>
         </div> -->
+
+    <!-- <script>
+        alert("Hello Welcome")
+    </script> -->
 </body>
 <script src="js/datatype.js"></script>
 <script src="js/string.js"></script>
@@ -28,5 +32,6 @@
 <script src="js/object.js"></script>
 <script src="js.control-flow.js"></script>
 <script src="js/loop.js"></script>
+<script src="js/function.js"></script>
 
 </html>
